--- a/index.html
+++ b/index.html
@@ -132,18 +132,22 @@
 
         /* 用户窗格 */
         .user-panel {
+            position: relative;
             display: flex;
             align-items: center;
             background: rgba(255, 255, 255, 0.2);
             padding: 0.5rem 1rem;
             border-radius: 20px;
+            cursor: pointer;
         }
 
         .user-panel img {
             width: 40px;
             height: 40px;
-            border-radius: 50%;
+            border-radius: 8px;
+            /* 改为方形带圆角 */
             margin-right: 0.5rem;
+            object-fit: cover;
         }
 
         .user-panel span {
@@ -154,7 +158,36 @@
         .user-panel .dropdown {
             margin-left: 1rem;
             color: white;
-            cursor: pointer;
+        }
+
+        .user-panel:hover .dropdown-menu {
+            display: block;
+        }
+
+        .dropdown-menu {
+            display: none;
+            position: absolute;
+            top: 100%;
+            right: 0;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            min-width: 150px;
+            z-index: 100;
+        }
+
+        .dropdown-menu a {
+            display: block;
+            padding: 0.8rem 1.2rem;
+            color: #333;
+            text-decoration: none;
+            font-size: 1rem;
+            transition: background 0.3s;
+        }
+
+        .dropdown-menu a:hover {
+            background: #f0f0f0;
+            color: #1C64F2;
         }
 
         /* 内容区 */
@@ -191,26 +224,33 @@
             margin-bottom: 1.5rem;
         }
 
-        /* 商品与服务样式 */
-        .shop-gallery {
-            display: flex;
-            justify-content: center;
-            gap: 2.5rem;
+        /* 商品跑马灯 */
+        .shop-carousel {
+            position: relative;
+            width: 100%;
+            overflow: hidden;
             padding: 2rem 0;
-            perspective: 2000px;
+        }
+
+        .shop-items {
+            display: flex;
+            width: 300%;
+            animation: slide 20s infinite linear;
+        }
+
+        .shop-items:hover {
+            animation-play-state: paused;
         }
 
         .shop-item {
-            width: 350px;
+            min-width: 350px;
             background: linear-gradient(145deg, #ffffff, #f0f0f0);
             border-radius: 20px;
             box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
             padding: 2rem;
             text-align: center;
             transition: transform 0.5s ease, box-shadow 0.5s ease, filter 0.5s ease;
-            position: relative;
-            transform-style: preserve-3d;
-            will-change: transform;
+            margin: 0 1rem;
         }
 
         .shop-item img {
@@ -220,7 +260,6 @@
             border-radius: 12px;
             margin-bottom: 1.5rem;
             transition: transform 0.5s ease;
-            transform: translateZ(0);
         }
 
         .shop-item h3 {
@@ -241,60 +280,37 @@
             font-size: 1.1rem;
             font-weight: 500;
             transition: background 0.3s ease, transform 0.3s ease;
-            transform: translateZ(0);
         }
 
         .shop-item a:hover {
             background: #1550c2;
-            transform: translateZ(10px);
+            transform: translateY(-3px);
         }
 
-        /* 鼠标悬停效果 */
-        .shop-gallery:hover .shop-item {
+        .shop-items:hover .shop-item {
             transform: scale(0.95);
             filter: brightness(0.85);
         }
 
         .shop-item:hover {
-            transform: scale(1.15) rotateX(8deg) rotateY(8deg);
+            transform: scale(1.15);
             box-shadow: 0 20px 50px rgba(0, 0, 0, 0.2);
             filter: brightness(1);
             z-index: 2;
         }
 
-        .shop-item:hover img {
-            transform: translateZ(30px);
-        }
-
-        .shop-item:hover h3 {
-            transform: translateZ(20px);
-        }
-
-        .shop-item:hover a {
-            transform: translateZ(15px);
-        }
-
-        .shop-item:hover {
-            animation: tilt 0.5s ease;
-        }
-
-        @keyframes tilt {
+        @keyframes slide {
             0% {
-                transform: scale(1) rotateX(0deg) rotateY(0deg);
-            }
-
-            50% {
-                transform: scale(1.15) rotateX(12deg) rotateY(12deg);
+                transform: translateX(0);
             }
 
             100% {
-                transform: scale(1.15) rotateX(8deg) rotateY(8deg);
+                transform: translateX(-33.33%);
             }
         }
 
         /* 服务流程 */
         .process {
-            position: relative;
             margin: 4rem 0;
             padding: 2rem 0;
             background: linear-gradient(135deg, #e6f0fa, #f4f4f9);
@@ -304,7 +320,21 @@
         .process-timeline {
             display: flex;
             justify-content: space-between;
+            align-items: center;
             position: relative;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .process-timeline::before {
+            content: '';
+            position: absolute;
+            top: 25px;
+            left: 0;
+            width: 100%;
+            height: 4px;
+            background: #ccc;
+            z-index: 0;
         }
 
         .process-step {
@@ -312,25 +342,23 @@
             text-align: center;
             position: relative;
             z-index: 1;
+            transition: transform 0.3s ease;
         }
 
-        .process-step::before {
+        .process-step.active::after {
             content: '';
-            width: 100%;
-            height: 4px;
-            background: #ccc;
             position: absolute;
             top: 25px;
-            left: -50%;
-            z-index: -1;
-        }
-
-        .process-step.active::before {
+            left: 50%;
+            width: 100%;
+            height: 4px;
             background: #1C64F2;
+            z-index: -1;
+            transform: translateX(-50%);
         }
 
-        .process-step:first-child::before {
-            display: none;
+        .process-step:last-child.active::after {
+            width: 0;
         }
 
         .process-circle {
@@ -344,12 +372,22 @@
             align-items: center;
             margin: 0 auto 1rem;
             font-size: 1.5rem;
-            transition: background 0.3s;
+            transition: background 0.3s, transform 0.3s;
+            position: relative;
+            z-index: 2;
         }
 
         .process-step.active .process-circle {
             background: #1C64F2;
             box-shadow: 0 0 10px rgba(28, 100, 242, 0.5);
+        }
+
+        .process-step:hover {
+            transform: translateY(-5px);
+        }
+
+        .process-step:hover .process-circle {
+            transform: scale(1.1);
         }
 
         .process-step p {
@@ -412,9 +450,17 @@
             <a href="#about">关于我们</a>
         </div>
         <div class="user-panel">
-            <img src="https://images.unsplash.com/photo-1561948955-570b270e7c36" alt="User Avatar">
+            <img src="https://images.unsplash.com/photo-1592194996308-7b43878e84a6" alt="User Avatar">
             <span>小灵犬</span>
             <div class="dropdown">▼</div>
+            <div class="dropdown-menu">
+                <a href="#">个人中心</a>
+                <a href="#">检查报告</a>
+                <a href="#">购买清单</a>
+                <a href="#">我的宠物</a>
+                <a href="#">设置</a>
+                <a href="#">退出登录</a>
+            </div>
         </div>
     </nav>
 
@@ -438,24 +484,43 @@
         </p>
     </div>
 
-    <!-- 商品与服务 -->
+    <!-- 商品跑马灯 -->
     <div class="container" id="shop">
         <h2>商品与服务</h2>
-        <div class="shop-gallery">
-            <div class="shop-item">
-                <img src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg" alt="Swab Kit">
-                <h3>咽拭子采样套装</h3>
-                <a href="#">立即购买</a>
-            </div>
-            <div class="shop-item">
-                <img src="https://images.pexels.com/photos/825947/pexels-photo-825947.jpeg" alt="Care Product">
-                <h3>精准养护套餐</h3>
-                <a href="#">立即购买</a>
-            </div>
-            <div class="shop-item">
-                <img src="https://images.pexels.com/photos/4588065/pexels-photo-4588065.jpeg" alt="Report">
-                <h3>衰老分析报告</h3>
-                <a href="https://cloud.dify.ai/explore/installed/b7edfd4c-1f56-494d-b893-3940ac834c66" target="_blank">获取报告</a>
+        <div class="shop-carousel">
+            <div class="shop-items">
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg" alt="Swab Kit">
+                    <h3>咽拭子采样套装</h3>
+                    <a href="#">立即购买</a>
+                </div>
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/825947/pexels-photo-825947.jpeg" alt="Care Product">
+                    <h3>精准养护套餐</h3>
+                    <a href="#">立即购买</a>
+                </div>
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/4588065/pexels-photo-4588065.jpeg" alt="Report">
+                    <h3>衰老分析报告</h3>
+                    <a href="https://cloud.dify.ai/explore/installed/b7edfd4c-1f56-494d-b893-3940ac834c66"
+                        target="_blank">获取报告</a>
+                </div>
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg" alt="Swab Kit">
+                    <h3>咽拭子采样套装</h3>
+                    <a href="#">立即购买</a>
+                </div>
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/825947/pexels-photo-825947.jpeg" alt="Care Product">
+                    <h3>精准养护套餐</h3>
+                    <a href="#">立即购买</a>
+                </div>
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/4588065/pexels-photo-4588065.jpeg" alt="Report">
+                    <h3>衰老分析报告</h3>
+                    <a href="https://cloud.dify.ai/explore/installed/b7edfd4c-1f56-494d-b893-3940ac834c66"
+                        target="_blank">获取报告</a>
+                </div>
             </div>
         </div>
     </div>
