--- a/index.html
+++ b/index.html
@@ -562,6 +562,74 @@
                     <a href="https://cloud.dify.ai/explore/installed/b7edfd4c-1f56-494d-b893-3940ac834c66"
                         target="_blank">获取报告</a>
                 </div>
+                <!-- 重复卡片以实现无缝循环 -->
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg" alt="Swab Kit">
+                    <h3>咽拭子采样套装</h3>
+                    <a href="#">立即购买</a>
+                </div>
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/825947/pexels-photo-825947.jpeg" alt="Care Product">
+                    <h3>精准养护套餐</h3>
+                    <a href="#">立即购买</a>
+                </div>
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/4588065/pexels-photo-4588065.jpeg" alt="Report">
+                    <h3>衰老分析报告</h3>
+                    <a href="https://cloud.dify.ai/explore/installed/b7edfd4c-1f56-494d-b893-3940ac834c66"
+                        target="_blank">获取报告</a>
+                </div>
+                <!-- 重复卡片以实现无缝循环 -->
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg" alt="Swab Kit">
+                    <h3>咽拭子采样套装</h3>
+                    <a href="#">立即购买</a>
+                </div>
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/825947/pexels-photo-825947.jpeg" alt="Care Product">
+                    <h3>精准养护套餐</h3>
+                    <a href="#">立即购买</a>
+                </div>
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/4588065/pexels-photo-4588065.jpeg" alt="Report">
+                    <h3>衰老分析报告</h3>
+                    <a href="https://cloud.dify.ai/explore/installed/b7edfd4c-1f56-494d-b893-3940ac834c66"
+                        target="_blank">获取报告</a>
+                </div>
+                <!-- 重复卡片以实现无缝循环 -->
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg" alt="Swab Kit">
+                    <h3>咽拭子采样套装</h3>
+                    <a href="#">立即购买</a>
+                </div>
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/825947/pexels-photo-825947.jpeg" alt="Care Product">
+                    <h3>精准养护套餐</h3>
+                    <a href="#">立即购买</a>
+                </div>
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/4588065/pexels-photo-4588065.jpeg" alt="Report">
+                    <h3>衰老分析报告</h3>
+                    <a href="https://cloud.dify.ai/explore/installed/b7edfd4c-1f56-494d-b893-3940ac834c66"
+                        target="_blank">获取报告</a>
+                </div>
+                <!-- 重复卡片以实现无缝循环 -->
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg" alt="Swab Kit">
+                    <h3>咽拭子采样套装</h3>
+                    <a href="#">立即购买</a>
+                </div>
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/825947/pexels-photo-825947.jpeg" alt="Care Product">
+                    <h3>精准养护套餐</h3>
+                    <a href="#">立即购买</a>
+                </div>
+                <div class="shop-item">
+                    <img src="https://images.pexels.com/photos/4588065/pexels-photo-4588065.jpeg" alt="Report">
+                    <h3>衰老分析报告</h3>
+                    <a href="https://cloud.dify.ai/explore/installed/b7edfd4c-1f56-494d-b893-3940ac834c66"
+                        target="_blank">获取报告</a>
+                </div>
             </div>
         </div>
     </div>
