--- a/index.html
+++ b/index.html
@@ -483,8 +483,8 @@
     <nav>
         <div class="logo">AI宠物养护</div>
         <div>
-            <a href="#home">首页</a>
-            <a href="#shop">商店</a>
+            <a href="#home">项目概况</a>
+            <a href="#shop">商店与服务</a>
             <a href="#process">服务流程</a>
             <a href="#about">关于我们</a>
         </div>
