--- a/index.html
+++ b/index.html
@@ -683,10 +683,10 @@
     <!-- 聊天机器人 -->
     <script>
         window.difyChatbotConfig = {
-            token: '86I1vYFle9TbO4IX'
+            token: 'jQVOuEi5fgjcfTVX'
         }
     </script>
-    <script src="https://udify.app/embed.min.js" id="86I1vYFle9TbO4IX" defer></script>
+    <script src="https://udify.app/embed.min.js" id="jQVOuEi5fgjcfTVX" defer></script>
 </body>
 
 </html>
